--- a/css/polderCSS/clotheShop.css
+++ b/css/polderCSS/clotheShop.css
@@ -24,13 +24,18 @@ nav {
 .article1 {
   display: flex;
   align-items: center;
+  width: 100%;
 }
 .about_img {
-  width: 20%;
+  width: 40%;
+  box-sizing: border-box;
+  border-radius: 10%;
 }
 .about {
   display: flex;
   flex-direction: row;
+  width: 80%;
+  margin: auto;
 }
 .about_section {
   margin: 20px;
@@ -39,21 +44,30 @@ nav {
 .article2 {
   display: flex;
   flex-direction: row;
-  gap: 2rem;
-  padding: 50px;
+  justify-content: space-between;
+
+  width: 100%;
+  height: 100%;
 }
 form {
+}
+.form-wrap {
   border: 3px solid black;
+  box-sizing: border-box;
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-direction: column;
   padding: 20px;
-  flex-grow: 1;
-  width: 45%;
+  height: 100%;
 }
+#sendBtn {
+  width: 25%;
+  margin: 25px 25px 0 25px;
+}
+
 .article2_img {
   width: 45%;
+  border-radius: 10%;
 }
 .article3 {
   margin: auto;
@@ -65,11 +79,19 @@ form {
   justify-content: space-between;
 }
 .article3 > ul > li {
-  width: 15%;
+  width: 8%;
 }
 .article3 > ul > li > img {
   width: 100%;
 }
 h3 {
   text-align: center;
+  margin: 0;
+}
+footer {
+  text-align: center;
+}
+a {
+  text-decoration: none;
+  color: black;
 }
